alambert    2005/11/09 04:05:31 UTC	(20051109-3703)
  Log:
  example configs: sra restrictions removed

  Changes:	Modified:
  +2 -3		trunk/dist/example.conf (File Modified) 
  +0 -3		trunk/dist/example.userserv.conf (File Modified) 


alambert    2005/11/09 03:14:37 UTC	(20051109-3701)
  Log:
  Improve nickname sanity checking -- we still have a ways to go, though

  Changes:	Modified:
  +5 -2		trunk/modules/nickserv/link.c (File Modified) 
  +1 -0		trunk/modules/xmlrpc/account.c (File Modified) 


alambert    2005/11/09 03:03:30 UTC	(20051109-3699)
  Log:
  Add UID checking for NS LINK. Thanks to nenolod ;p

  Changes:	Modified:
  +6 -0		trunk/modules/nickserv/link.c (File Modified) 


nenolod     2005/11/09 02:52:30 UTC	(20051109-3697)
  Log:
  switch user_find with user_find_named in a few places. Requested by alambert. Reviewed by me. :P

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/ghost.c (File Modified) 
  +1 -1		trunk/modules/nickserv/link.c (File Modified) 


alambert    2005/11/09 02:33:44 UTC	(20051109-3695)
  Log:
  NS LINK: bail out if the user has MU_WAITAUTH

  Changes:	Modified:
  +6 -0		trunk/modules/nickserv/link.c (File Modified) 


alambert    2005/11/09 02:30:48 UTC	(20051109-3693)
  Log:
  NS LINK: use the right pointer when determining flags

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/link.c (File Modified) 


alambert    2005/11/09 02:21:33 UTC	(20051109-3691)
  Log:
  SENDPASS: reset encrypted passwords instead. ...more controversial than Oolon Colluphid's trilogy of philosophical blockbusters 'Where God Went Wrong', 'Some More of God's Greatest Mistakes', and 'Who is this God Pesron, Anyway?'...

  Changes:	Modified:
  +8 -5		trunk/modules/nickserv/sendpass.c (File Modified) 
  +9 -5		trunk/modules/userserv/sendpass.c (File Modified) 


alambert    2005/11/09 02:00:31 UTC	(20051109-3689)
  Log:
  SENDPASS: notify the requester that encrypted passwords cannot be sent.

  Changes:	Modified: